runit 0.5.2
Mon, 23 Sep 2002 12:07:42 +0200
  * runsv, runsvdir: new; svscan/supervise replacement.
  * etc/runit/2: use runsvlog instead of svscanboot.

runit 0.5.0
Wed, 28 Aug 2002 11:18:28 +0200
  * utmpset: avoids libutil; compiles with deitlibc; built by default.
  * doc/usedietlibc.html: fix description.
  * getty-*/run: add utmpset.

runit 0.4.1
Mon, 24 Jun 2002 15:53:11 +0200
  * utmpset.c: new option -w: additionally write wtmp record.

runit 0.4.0
Sun, 19 May 2002 12:28:29 +0200
  * src/: include public domain sources to build byte.a, unix.a, time.a:
    runit builds without having daemontools' sources installed.
  * utmpset.c: new utmpset program.
  * doc/utmpset.html: new.

runit 0.3.2
Wed, 13 Feb 2002 10:56:17 +0100
  * runit.c: support ctrl-alt-del also on Linux/i386, dietlibc.
  * runscripts.html: more samples. (thx Alessandro Bono)

runit 0.3.1
Sun,  3 Feb 2002 16:30:55 +0100
  * src: cleanup.

runit 0.3.0
Tue, 29 Jan 2002 19:38:33 +0100
  * doc: adapted.
  * runit.8: changes documented.
  * runscripts.html: more examples.

runit 0.2.9
Thu, 17 Jan 2002 19:00:44 +0100
  * reportedly runs on FreeBSD 4.3 (thx clemensF)
  * svwaitdown: max timeout is 6000, really. (thx ska)
  * runit.c: stage 1 gets no new session and full control of console; an
    emergency shell or login program (if present) can be executed.
  * openbsd, freebsd: support for 'single user' emergency shell in stage 1
  * runit.c: skip stage 2 if stage 1 crashes.

runit 0.2.7
Tue,  1 Jan 2002 16:20:14 +0100
  * tested on fresh freebsd 4.4 installation in vmware
  * new etc/freebsd: stages and getty service
  * doc: replaceinit: how to replace bsd init (freebsd)
  * svwaitup: minor code cleanup
  * doc: /service/getty-5/ as default getty service.
  * doc: index: related links added.
  * package: install-man added for installing manpages in /usr/local/man/

runit 0.2.6
Sun, 30 Dec 2001 17:29:29 +0100
  * runs on openbsd 2.9
  * runit: console init and reinit
  * runit: sig_pause() on end.